crates/flotilla-core/src/in_process/snapshots/flotilla_core__in_process__tests__bosun.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[bosun reviewer@implement · guidance for your stalled work · reply by running `crew complete`]

Example message.
