crates/flotilla-core/src/in_process/snapshots/flotilla_core__in_process__tests__follow_up.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[operator robert · follow-up brief · reply by running `crew complete`]

Example message.
