crates/flotilla-core/src/in_process/snapshots/flotilla_core__in_process__tests__governor.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[governor wheelhouse · supervise the stalled crew]

Example message.
