crates/flotilla-core/src/in_process/snapshots/flotilla_core__in_process__tests__handoff.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[handoff from coder@implement]

Example message.
