crates/flotilla-core/src/in_process/snapshots/flotilla_core__in_process__tests__nudge.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[flotilla · nudge · reply by running `crew complete` or `crew fail`]

Example message.
