crates/flotilla-core/src/in_process/snapshots/flotilla_core__in_process__tests__resume.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[operator robert · via convoy resume]

Example message.
